--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Sadhguru’s Encounter With Aliens</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Manikarnika Ghat | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GARTIC PHONE IN REAL LIFE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Escaping the Illusion of Time</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>How to Escape the Illusion of Time | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Power of Initiation | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -992,7 +992,7 @@
                     <div class="video-info">
                         <h3>Why You Need to Be Bored</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Sadhguru’s Encounter With Aliens</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Manikarnika Ghat | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Escaping the Illusion of Time</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7938,7 +7938,7 @@
                         <div class="video-info">
                             <h3>How to Escape the Illusion of Time | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7949,7 +7949,7 @@
                         <div class="video-info">
                             <h3>Power of Initiation | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8224,7 +8224,7 @@
                         <div class="video-info">
                             <h3>Why You Need to Be Bored</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GARTIC PHONE IN REAL LIFE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
